--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <div th:if="${param.error}">
-                <div class="alert alert-danger">Invalid Email and Password.</div>
+                <div class="alert alert-danger">Invalid Username and Password.</div>
             </div>
             <div th:if="${param.logout}">
                 <div class="alert alert-success">You have been logged out.</div>
@@ -41,12 +41,12 @@
                             role="form"
                     >
                         <div class="mb-3">
-                            <label for="username" class="control-label">Email *</label>
+                            <label for="username" class="control-label">Username *</label>
                             <input type="text"
                                    id="username"
                                    name="username"
                                    class="form-control"
-                                   placeholder="Email"
+                                   placeholder="Username"
                             />
                         </div>
 
