--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -31,7 +31,7 @@
                 <h2 class="text-center">Registration</h2>
             </div>
             <div class="card-body">
-                <form method="post" role="form" th:action="@{/register/save}">
+                <form method="post" role="form" th:action="@{/register}">
 
                     <div class="form-group mb-3">
                         <label class="form-label">Username</label>
@@ -43,15 +43,6 @@
                         />
                     </div>
 
-                    <div class="form-group mb-3">
-                        <label class="form-label">Email</label>
-                        <input class="form-control"
-                               id="email"
-                               name="email"
-                               placeholder="Enter email address"
-                               type="email"
-                        />
-                    </div>
                     <div class="form-group mb-3">
                         <label class="form-label">Password</label>
                         <input class="form-control"
