--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -7,9 +7,13 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <div>
+                <a th:href="@{/logout}"> Logout</a>
+            </div>
             <form th:action="@{/search}" method="post">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" name="search" id="search" placeholder="Search by title">
